--- a/NewsEngine2.0/NewsEngine2.0.csproj
+++ b/NewsEngine2.0/NewsEngine2.0.csproj
@@ -251,6 +251,7 @@
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\News\PhotoUpload.cshtml" />
     <Content Include="Views\News\EditorIndex.cshtml" />
+    <Content Include="Views\News\Show.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
