--- a/NewsEngine2.0/NewsEngine2.0.csproj
+++ b/NewsEngine2.0/NewsEngine2.0.csproj
@@ -252,6 +252,8 @@
     <Content Include="Views\News\PhotoUpload.cshtml" />
     <Content Include="Views\News\EditorIndex.cshtml" />
     <Content Include="Views\News\Show.cshtml" />
+    <Content Include="Views\Shared\CommentDetails.cshtml" />
+    <Content Include="Views\Shared\Comment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
