--- a/NewsEngine2.0/Web.config
+++ b/NewsEngine2.0/Web.config
@@ -8,9 +8,9 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <!--<connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NewsEngine2.0-20191123102516.mdf;Initial Catalog=aspnet-NewsEngine2.0-20191123102516;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\anama\source\repos\humastefan19\NewsEngine2.0\NewsEngine2.0\NewsEngine2.0\App_Data\aspnet-NewsEngine2.0-20191123102516.mdf;Initial Catalog=aspnet-NewsEngine2.0-20191123102516;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
