--- a/NewsEngine2.0/NewsEngine2.0.csproj
+++ b/NewsEngine2.0/NewsEngine2.0.csproj
@@ -264,11 +264,11 @@
     <Content Include="Views\Category\Edit.cshtml" />
     <Content Include="Views\Shared\Comment.cshtml" />
     <Content Include="Views\Shared\CommentDetails.cshtml" />
+    <Content Include="Views\Comment\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Images\" />
-    <Folder Include="Views\Comment\" />
     <Folder Include="Views\ProposedNews\" />
   </ItemGroup>
   <ItemGroup>
