--- a/NewsEngine2.0/NewsEngine2.0.csproj
+++ b/NewsEngine2.0/NewsEngine2.0.csproj
@@ -265,11 +265,11 @@
     <Content Include="Views\Shared\Comment.cshtml" />
     <Content Include="Views\Shared\CommentDetails.cshtml" />
     <Content Include="Views\Comment\Edit.cshtml" />
+    <Content Include="Views\ProposedNews\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Images\" />
-    <Folder Include="Views\ProposedNews\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
