--- a/NewsEngine2.0/Web.config
+++ b/NewsEngine2.0/Web.config
@@ -9,7 +9,7 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\stefa\Source\Repos\humastefan19\NewsEngine2.0\NewsEngine2.0\App_Data\DefaultConnection.mdf;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\anama\source\repos\humastefan19\NewsEngine2.0\NewsEngine2.0\NewsEngine2.0\App_Data\aspnet-NewsEngine2.0-20191123102516.mdf;Initial Catalog=aspnet-NewsEngine2.0-20191123102516;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -23,7 +23,7 @@
     The following attributes can be set on the <httpRuntime> tag.
       <system.Web>
         <httpRuntime targetFramework="4.6.1" />
-      </system.Web>
+      </systnnem.Web>
   -->
   <system.web>
     <authentication mode="None" />
